# BaxterSDK

./: .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  conf.py  pyproject.toml
.github/workflows/: docs.yml
baxter_tools/: setup.py
docs/: about.rst  conf.py  index.rst  installation.rst  patterns.rst
docs/api/: baxter_control.rst  modules.rst
src/baxter_common/baxter_core_msgs/: mapping_rules.yaml  package.xml
src/baxter_common/baxter_maintenance_msgs/: mapping_rules.yaml  package.xml
src/baxter_description/: CMakeLists.txt
src/baxter_description/launch/: baxter_description.launch.xml
src/baxter_description/urdf/: baxter.urdf  baxter.urdf.xacro
src/baxter_examples/: package.xml  setup.cfg  setup.py
src/baxter_examples/baxter_examples/: README.md  __init__.py  analog_io_rampup.py  gripper_cuff_control.py  head_wobbler.py  joint_position_file_playback.py  joint_position_joystick.py  joint_recorder.py  navigator_io.py  recorder.py  xdisplay_image.py
src/baxter_examples/launch/: joint_position_joystick.launch.xml
src/baxter_external_devices/: package.xml  setup.cfg  setup.py
src/baxter_external_devices/baxter_external_devices/: __init__.py  getch.py  joystick.py
src/baxter_interface/: setup.py
src/baxter_interface/baxter_control/: __init__.py  pid.py
src/baxter_interface/baxter_dataflow/: wait_for.py
src/baxter_interface/baxter_interface/: README.md  __init__.py  analog_io.py  base.py  camera.py  digital_io.py  gripper.py  (+7 more)
src/baxter_tools/: package.xml  setup.cfg  setup.py
src/rethink_ee_description/: CMakeLists.txt
(+42 files in other folders)
