<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baxter_external_devices</name>
  <version>0.0.0</version>
  <description>External device drivers (joystick, keyboard) for the Baxter Research Robot SDK.</description>
  <maintainer email="deboerandnet@gmail.com">Andnet DeBoer</maintainer>
  <license>MIT</license>

  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_mypy</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
